  . ini_set() with mbstring.detect_order changes the order of mb_detect_order
    as intended, since mbstring.detect_order is an INI_ALL setting. (tobee94)
  . Added GB18030-2022 to default encoding list for zh-CN. (HeRaNO)
  . Fixed bug GH-20674 (Fix GH-20674 mb_decode_mimeheader does not handle
    separator). (Yuya Hamada)

- Opcache:
  . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
    preloading). (Arnaud, welcomycozyhom)

- PDO_PGSQL:
  . Clear session-local state disconnect-equivalent processing.
    (KentarouTakeda)

- Phar:
  . Support reference values in Phar::mungServer(). (ndossche)
  . Invalid values now throw in Phar::mungServer() instead of being silently
    ignored. (ndossche)
  . Support overridden methods in SplFileInfo for getMTime() and getPathname()
    when building a phar. (ndossche)

- Reflection:
  . Fixed bug GH-20217 (ReflectionClass::isIterable() incorrectly returns true
    for classes with property hooks). (alexandre-daubois)

- Soap:
  . Soap::__setCookie() when cookie name is a digit is now not stored and represented
    as a string anymore but a int. (David Carlier)

- SPL:
  . DirectoryIterator key can now work better with filesystem supporting larger
    directory indexing. (David Carlier)

- Sqlite3:
  . Fix NUL byte truncation in sqlite3 TEXT column handling. (ndossche)

- Standard:
  . Fixed bug GH-19926 (reset internal pointer earlier while splicing array
    while COW violation flag is still set). (alexandre-daubois)

- Streams:
  . Added so_reuseaddr streams context socket option that allows disabling
    address resuse.
  . Fixed bug GH-20370 (User stream filters could violate typed property
    constraints). (alexandre-daubois)

- Zip:
  . Fixed ZipArchive callback being called after executor has shut down.
    (ilutov)
  . Support minimum version for libzip dependency updated to 1.0.0.
    (David Carlier)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>