@@ -2414,7 +2414,7 @@ diff -u libmagic.orig/funcs.c libmagic/funcs.c
 +	}
 +
 +	repl = zend_string_init(rep, strlen(rep), 0);
-+	res = php_pcre_replace_impl(pce, NULL, ms->o.buf, strlen(ms->o.buf), repl, -1, &rep_cnt);
++	res = php_pcre_replace_impl(pce, NULL, ms->o.buf, strlen(ms->o.buf), repl, -1, &rep_cnt, 0);
 +
 +	zend_string_release_ex(repl, 0);
 +	if (NULL == res) {
